Se termina la implementacion de cotizaciones