@@ -1,9 +1,9 @@
 package com.adminsures.sures.services;
 
 import com.adminsures.sures.dto.CotizacionDTO;
-import com.adminsures.sures.dto.ProductoCotizadoDTO;
 import com.adminsures.sures.entitys.Cliente;
 import com.adminsures.sures.entitys.Cotizacion;
+import com.adminsures.sures.entitys.CotizacionProducto;
 import com.adminsures.sures.entitys.Producto;
 import com.adminsures.sures.mapper.CotizacionMapper;
 import com.adminsures.sures.repository.ClienteRepository;
@@ -11,8 +11,11 @@ import com.adminsures.sures.repository.CotizacionRepository;
 import com.adminsures.sures.repository.ProductoRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class CotizacionService {
@@ -29,54 +32,86 @@ public class CotizacionService {
     @Autowired
     private CotizacionMapper cotizacionMapper;
 
-    public List<CotizacionDTO> obtenerTodasLasCotizaciones( ) {
-        return cotizacionRepository.findAll().stream().map(CotizacionMapper::toDTO).toList();
+    @Transactional(readOnly = true)
+    public List<CotizacionDTO> obtenerTodas() {
+        List<Cotizacion> cotizaciones = cotizacionRepository.findAll();
+        return cotizaciones.stream()
+                .map(cotizacionMapper::toDto)
+                .collect(Collectors.toList());
     }
 
-    public CotizacionDTO obtenerCotizacion(Long id) throws Exception {
+    @Transactional(readOnly = true)
+    public CotizacionDTO obtenerPorId(Long id) {
         Cotizacion cotizacion = cotizacionRepository.findById(id)
-                .orElseThrow(() -> new Exception("Cotizacion no encontrada: " + id));
-        return cotizacionMapper.toDTO(cotizacion);
+                .orElseThrow(() -> new RuntimeException("Cotización no encontrada"));
+        return cotizacionMapper.toDto(cotizacion);
     }
 
-    public CotizacionDTO crearCotizacion(CotizacionDTO cotizacionDTO) throws Exception {
-        Cliente cliente = clienteRepository.findById(cotizacionDTO.getClienteId()).orElseThrow(() -> new Exception("Cliente no encontrado"));
+    @Transactional
+    public CotizacionDTO crearCotizacion(CotizacionDTO cotizacionDTO) {
+        Cotizacion cotizacion = new Cotizacion();
 
-        List<Producto> productos = productoRepository.findAllById(cotizacionDTO.getProductos().stream().map(ProductoCotizadoDTO::getProductoId).toList());
+        // Mapeo del cliente
+        Cliente cliente = clienteRepository.findById(cotizacionDTO.getCliente().getId())
+                .orElseThrow(() -> new RuntimeException("Cliente no encontrado"));
+        cotizacion.setCliente(cliente);
 
-        Cotizacion cotizacion = CotizacionMapper.toEntity(cotizacionDTO, cliente, productos);
-        Cotizacion nuevaContizacion = cotizacionRepository.save(cotizacion);
-        return CotizacionMapper.toDTO(nuevaContizacion);
+        // Mapeo de los productos
+        List<CotizacionProducto> productos = cotizacionMapper.mapProductosToEntity(cotizacionDTO.getProductos(), cotizacion);
+        for (CotizacionProducto cotizacionProducto : productos) {
+            Producto producto = productoRepository.findById(cotizacionProducto.getProducto().getId())
+                    .orElseThrow(() -> new RuntimeException("Producto no encontrado"));
+            cotizacionProducto.setProducto(producto);
+        }
+        cotizacion.setProductos(productos);
+
+        // Cálculo del subtotal y total
+        cotizacion.setDescuentoAdicional(cotizacionDTO.getDescuentoAdicional());
+        cotizacion.setSubtotal(cotizacionMapper.calcularSubtotal(cotizacion));
+        cotizacion.setTotal(cotizacionMapper.calcularTotal(cotizacion));
+
+        // Guardar la cotización
+        cotizacion = cotizacionRepository.save(cotizacion);
+
+        return cotizacionMapper.toDto(cotizacion);
     }
 
-    public CotizacionDTO actualizarCotizacion(Long id, CotizacionDTO cotizacionDTO) throws Exception {
-        Cotizacion cotizacionExistente = cotizacionRepository.findById(id).orElseThrow(() -> new Exception("Cotizacion no encontrada"));
+    @Transactional
+    public CotizacionDTO actualizarCotizacion(Long id, CotizacionDTO cotizacionDTO) {
+        Cotizacion cotizacionExistente = cotizacionRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Cotización no encontrada"));
 
-        Cliente cliente = clienteRepository.findById(cotizacionDTO.getClienteId())
-                .orElseThrow(() -> new Exception("Cliente no encontrado"));
-
-        List<Producto> productos = productoRepository.findAllById(cotizacionDTO.getProductos().stream()
-                .map(ProductoCotizadoDTO::getProductoId).toList());
-
+        // Actualizar cliente
+        Cliente cliente = clienteRepository.findById(cotizacionDTO.getCliente().getId())
+                .orElseThrow(() -> new RuntimeException("Cliente no encontrado"));
         cotizacionExistente.setCliente(cliente);
+
+        // Actualizar productos
+        List<CotizacionProducto> productos = cotizacionMapper.mapProductosToEntity(cotizacionDTO.getProductos(), cotizacionExistente);
+        for (CotizacionProducto cotizacionProducto : productos) {
+            Producto producto = productoRepository.findById(cotizacionProducto.getProducto().getId())
+                    .orElseThrow(() -> new RuntimeException("Producto no encontrado"));
+            cotizacionProducto.setProducto(producto);
+        }
         cotizacionExistente.getProductos().clear();
-        cotizacionDTO.getProductos().forEach(productoDTO -> {
-            Producto producto = productos.stream()
-                    .filter(p -> p.getId().equals(productoDTO.getProductoId()))
-                    .findFirst()
-                    .orElseThrow(() -> new IllegalArgumentException("Prodicto no econtrado"));
+        cotizacionExistente.getProductos().addAll(productos);
 
-            cotizacionExistente.agregarProducto(producto, productoDTO.getCantidad());
-        });
+        // Actualizar descuentos, subtotal y total
+        cotizacionExistente.setDescuentoAdicional(cotizacionDTO.getDescuentoAdicional());
+        cotizacionExistente.setSubtotal(cotizacionMapper.calcularSubtotal(cotizacionExistente));
+        cotizacionExistente.setTotal(cotizacionMapper.calcularTotal(cotizacionExistente));
+        cotizacionExistente.setFechaActualizacion(LocalDate.now());
 
-        cotizacionExistente.setDescuento(cotizacionDTO.getDescuento());
-        cotizacionExistente.actualizarCotizacion();
+        // Guardar cambios
+        cotizacionExistente = cotizacionRepository.save(cotizacionExistente);
 
-        Cotizacion cotizacionActualizada = cotizacionRepository.save(cotizacionExistente);
-        return CotizacionMapper.toDTO(cotizacionActualizada);
+        return cotizacionMapper.toDto(cotizacionExistente);
     }
 
-    public void eliminarCotizacion(Long id){
-        cotizacionRepository.deleteById(id);
+    @Transactional
+    public void eliminarCotizacion(Long id) {
+        Cotizacion cotizacion = cotizacionRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Cotización no encontrada"));
+        cotizacionRepository.delete(cotizacion);
     }
 }
